// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 1`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    expanded={false}
    href="/"
    role="treeitem"
    tabIndex={-1}
    updateTreeItems={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 2`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-expanded="true"
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple"
    disabled={false}
    expanded={true}
    href="/"
    role="treeitem"
    tabIndex={-1}
    updateTreeItems={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 3`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    expanded={false}
    href="/"
    role="treeitem"
    tabIndex={0}
    updateTreeItems={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly as a link with the provided props 4`] = `
<li
  className="rmd-tree-item"
  role="none"
>
  <a
    aria-expanded="true"
    aria-level={1}
    aria-posinset={1}
    aria-setsize={1}
    className="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-list-item--stateful rmd-states--simple rmd-states--selected"
    disabled={false}
    expanded={true}
    href="/"
    role="treeitem"
    tabIndex={0}
    updateTreeItems={[Function]}
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </a>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 1`] = `
<li
  aria-level={1}
  aria-posinset={1}
  aria-setsize={1}
  className="rmd-tree-item rmd-states--simple"
  disabled={false}
  expanded={false}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="treeitem"
  tabIndex={-1}
  updateTreeItems={[Function]}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful"
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 2`] = `
<li
  aria-expanded="true"
  aria-level={1}
  aria-posinset={1}
  aria-setsize={1}
  className="rmd-tree-item rmd-states--simple"
  disabled={false}
  expanded={true}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="treeitem"
  tabIndex={-1}
  updateTreeItems={[Function]}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful"
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 3`] = `
<li
  aria-level={1}
  aria-posinset={1}
  aria-setsize={1}
  className="rmd-tree-item rmd-states--simple rmd-states--selected"
  disabled={false}
  expanded={false}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="treeitem"
  tabIndex={0}
  updateTreeItems={[Function]}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful"
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;

exports[`DefaultTreeItemRenderer should render correctly with the provided props 4`] = `
<li
  aria-expanded="true"
  aria-level={1}
  aria-posinset={1}
  aria-setsize={1}
  className="rmd-tree-item rmd-states--simple rmd-states--selected"
  disabled={false}
  expanded={true}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="treeitem"
  tabIndex={0}
  updateTreeItems={[Function]}
>
  <div
    className="rmd-tree-item__content rmd-list-item rmd-list-item--stateful"
  >
    <span
      className="rmd-list-item__text"
    >
      Content!
    </span>
  </div>
</li>
`;
